  * debian/maintscripts-functions, configure_version(): Improve check for
    already existing clusters to not catch subdirectories with non-cluster
    files (e. g. a single *.old and similar).
  * pg_ctlcluster: Add option -o to pass parameters to the postmaster process.
  * debian/postgresql-common.postinst: Avoid error message from ls if
    /usr/lib/postgresql does not exist.

 -- Martin Pitt <mpitt@debian.org>  Sun, 29 Jan 2006 10:30:19 +0100

postgresql-common (40) unstable; urgency=low

  * debian/supported-versions: Add 8.1 to Ubuntu 5.10 to properly support
    backport.
  * PgCommon.pm: If /etc/postgresql-common/user_clusters does not exist, use
    the default cluster instead of returning an invalid value. Also, do not
    complain if the file does not exist (which is legitime). Closes: #348447
  * debian/README.Debian: Fix 'detailled' typo. Closes: #346442
  * Replace most calls to get_conf_value() with the much more efficient new
    function read_cluster_conf_file().
  * pg_upgradecluster: Factorized and cleaned up parameter deprecation/upgrade
    code.
  * Support auxiliary environment variables for postmaster:
    - pg_createcluster: Create /etc/postgresql/version/cluster/environment
      file (empty, just a comment).
    - pg_dropcluster: Remove environment file.
    - pg_ctlcluster: Clear environment and only set variables mentioned in
      environment file and LANG/LC_ALL.
    - Closes: #345516
  * t/020_create_sql_remove.t: Check save environment and correct function of
    the environment file.
  * PgCommon.pm, next_free_port(): Check if the port is already in use, skip
    it if so. Closes: #348875.
  * t/090_multicluster.t: Create a socket bound to port 5434 and check that it
    is not used by pg_createcluster.

 -- Martin Pitt <mpitt@debian.org>  Sat, 21 Jan 2006 17:16:32 +0100

postgresql-common (39) unstable; urgency=low

  * Add t/090_multicluster.t: Test multicluster operation and environment